--- a/BillingSystem/packages.config
+++ b/BillingSystem/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.30" targetFramework="net472" />
+  <package id="Visual.Reactive.WinForms" version="1.0.0" targetFramework="net472" />
 </packages>
