--- a/BillingSystem/App.config
+++ b/BillingSystem/App.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+  </configSections>
   <connectionStrings>
     <add name="billingSystemDb" connectionString="Server=localhost\SQLEXPRESS01;Database=billingSystem;Trusted_Connection=True;"
-         providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient" />
+    <add name="BillingSystem.Properties.Settings.billingSystemConnectionString"
+      connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=billingSystem;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
