--- a/BillingSystem/BillingSystem.csproj
+++ b/BillingSystem/BillingSystem.csproj
@@ -58,6 +58,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>billingSystemDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Category.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Category.Designer.cs">
+      <DependentUpon>Category.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     <Compile Include="UserLogin.Designer.cs">
       <DependentUpon>UserLogin.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Category.resx">
+      <DependentUpon>Category.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
