--- a/BillingSystem/App.config
+++ b/BillingSystem/App.config
@@ -5,7 +5,7 @@
   <connectionStrings>
     <add name="billingSystemDb" connectionString="Server=localhost\SQLEXPRESS01;Database=billingSystem;Trusted_Connection=True;"
       providerName="System.Data.SqlClient" />
-    <add name="BillingSystem.Properties.Settings.billingSystemConnectionString"
+    <add name="connstrbs"
       connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=billingSystem;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
