--- a/BillingSystem/BillingSystem.csproj
+++ b/BillingSystem/BillingSystem.csproj
@@ -83,6 +83,8 @@
     <Compile Include="MainUserControl.Designer.cs">
       <DependentUpon>MainUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="OtherClasses\DataAccessForLogin.cs" />
+    <Compile Include="OtherClasses\GetterSetterForLoginForm.cs" />
     <Compile Include="Products.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -91,8 +93,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\DataAccessClass.cs" />
-    <Compile Include="Resources\GetterSetterForUserTable.cs" />
+    <Compile Include="OtherClasses\DataAccessClass.cs" />
+    <Compile Include="OtherClasses\GetterSetterForUserTable.cs" />
     <Compile Include="SignUp.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -217,6 +219,7 @@
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.NetFramework.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.NetFramework.CSharp.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
