--- a/BillingSystem/BillingSystem.csproj
+++ b/BillingSystem/BillingSystem.csproj
@@ -237,6 +237,9 @@
   <ItemGroup>
     <None Include="Resources\icons8-checked-user-male-80.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-developer-48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
